--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,33 @@
 @import "pages/index";
 @import "vendor/index";
 
+.banner {
+  background-size: cover;
+  padding: 150px 0px;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
 
+.card {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid grey;
+  padding: 30px;
+  margin-bottom: 10px;
+  background: #ACADB1;
+  max-width: 700px;
+}
+
+.card-content {
+  color: white;
+  align-items: left;
+}
+
+.card-review {
+  color: white;
+  position: absolute;
+  right: 20px;
+}
